--- a/box.html
+++ b/box.html
@@ -9,22 +9,28 @@
 
 <div class='wrapper'>
 	<p id='songs'></p>
-	<p id='songTitle'></p>
+	<h2><p id='songTitle'></p></h2>
 	<p id='artists'></p>
 
-		<div class='buttons'>
+		<div class='buttons'> 
 		<button id='play'>play</button>
 		<button id='pause'>pause</button>
 		<button id='next'>next</button>
 		</div>
-
+	
 		<audio id='dayNnite' class="song" src="songs/Day_n_Nite.m4a" img src="daynite.jpg"></audio>
 		<audio id='lazySong' class="song" src="songs/Lazy_Song.m4a"></audio>
 		<audio id='mirrors' class="song" src="songs/mirrors.m4a"></audio>
 		<audio id='yeah' class="song" src="songs/yeah.m4a"></audio>
+
+		<div class='images'>
+		<img src="song-images/daynite.jpg" id='dayniteImg' width="35%" height="35%">
+		<img src="song-images/lazysong.jpg" id='lazyImg' width="35%" height="35%">
+		<img src="song-images/mirrors.jpg" id='mirrorsImg' width="35%" height="35%">
+		<img src="song-images/Confessions.jpg" id='yeahImg' width="35%" height="35%">
+		</div>
+
 </div>
-
-
 
 
 
