--- a/box.html
+++ b/box.html
@@ -12,6 +12,8 @@
 	<h2><p id='songTitle'></p></h2>
 	<p id='artists'></p>
 
+	<div id='imageContainer'></div>
+
 		<div class='buttons'> 
 		<button id='play'>play</button>
 		<button id='pause'>pause</button>
@@ -23,12 +25,12 @@
 		<audio id='mirrors' class="song" src="songs/mirrors.m4a"></audio>
 		<audio id='yeah' class="song" src="songs/yeah.m4a"></audio>
 
-		<div class='images'>
+		<!-- <div class='images'>
 		<img src="song-images/daynite.jpg" id='dayniteImg' width="35%" height="35%">
 		<img src="song-images/lazysong.jpg" id='lazyImg' width="35%" height="35%">
 		<img src="song-images/mirrors.jpg" id='mirrorsImg' width="35%" height="35%">
 		<img src="song-images/Confessions.jpg" id='yeahImg' width="35%" height="35%">
-		</div>
+		</div> -->
 
 </div>
 
