--- a/box.html
+++ b/box.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
 <head>
 	<title>JukeBox</title>
@@ -10,9 +10,8 @@
 <div class='wrapper'>
 	<p id='songs'></p>
 	<h2><p id='songTitle'></p></h2>
-	<p id='artists'></p>
-
 	<div id='imageContainer'></div>
+	<p id='artists'></p>
 
 		<div class='buttons'> 
 		<button id='play'>play</button>
